Mon Dec 15 00:07:02 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (failure_exit): New variable.
	(get_server_responses): If it is set, then return
	failure.
	(updated_seen, updated_fname): New variables.
	(update_entries): Use updated_fname if set.  In the "move away
	foo.c; it is in the way" case print "C" not "U", and set
	failure_exit.
	(handle_mt): If we get +updated tagged text, stash it away in
	updated_fname rather than printing it immediately.
	(handle_mt, get_server_responses): If we stashed a filename and
	didn't get around to printing it, go ahead and print it.
	* sanity.sh (conflicts2-142d2): Adjust to test for fix.  Remote is
	now like local was in terms of exit status and "C aa.c" message.

Sun Dec 14 00:27:26 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	Implement tagged text feature:
	* update.c (write_letter): Take a single finfo argument rather
	than file and update_dir.  While we are at it change it to return
	void (since the returned value always had been 0).
	* update.c: Update callers.
	* server.c, cvs.h (cvs_output_tagged): New function.
	* client.c (responses): Add "MT" response.
	(handle_mt): New function.
	* update.c (write_letter): Output via cvs_output_tagged.

Sun Dec 14 14:13:05 1997  Ian Lance Taylor  <ian@cygnus.com>

	* recurse.c (do_dir_proc): Only check for CVS/Repository if
	W_LOCAL.
	* sanity.sh (devcom-t2, devcom-t3): New tests for above patch.

Sun Dec 14 00:27:26 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* root.c (parse_cvsroot): Initialize check_hostname (fixes thinko
	in GSSAPI changes).

Sat Dec 13 13:15:35 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c: Use indentation to indicate nesting of #ifdef's.

	* client.c (connect_to_gserver): Reindent (in one place).

Fri Dec 12 17:38:15 1997  Chris Provenzano <proven@cygnus.com>
	and Ian Lance Taylor  <ian@cygnus.com>

	* cvs.h (CVSmethod): Add gserver_method.
	* root.c (method_names): Add gserver.
	(parse_cvsroot): Handle :gserver:.